Restrict timeline to period of shown items only

--- a/views/data_timeline.tt
+++ b/views/data_timeline.tt
@@ -92,6 +92,8 @@
                 },
                 onMove: on_move,
                 snap:   snap_to_day,
+                min: "[% timeline.min.ymd %]",
+                max: "[% timeline.max.ymd %]",
                 orientation: {axis: "both"}
             };
 
