--- a/public/css/query-builder.css
+++ b/public/css/query-builder.css
@@ -1,11 +1,11 @@
 /*!
- * jQuery QueryBuilder 1.3.0-SNAPSHOT
- * Copyright 2014 Damien "Mistic" Sorel (http://www.strangeplanet.fr)
+ * jQuery QueryBuilder 1.4.2
+ * Copyright 2014-2015 Damien "Mistic" Sorel (http://www.strangeplanet.fr)
  * Licensed under MIT (http://opensource.org/licenses/MIT)
  */
-.rule-container,
-.rules-group-container,
-.rule-placeholder {
+.query-builder .rule-container,
+.query-builder .rules-group-container,
+.query-builder .rule-placeholder {
   margin:4px 0;
   border-radius:5px;
   padding:5px;
@@ -14,107 +14,118 @@
   background:rgba(255, 255, 255, 0.9);
 }
 
-/* GROUPS */
-.rules-group-container {
+.query-builder .rules-group-container {
   padding:10px 10px 5px 10px;
   border:1px solid #DCC896;
   background:#FCF9ED;
   background:rgba(250, 240, 210, 0.5);
 }
-  .rules-group-header {
+  .query-builder .rules-group-header {
     margin-bottom:10px;
   }
-    .rules-group-header input[name$=_cond] {
-/* Hack to make radio buttons appear (original CSS file includes width 0px).
- * Normally this would be overridden in another CSS file, but given how much of
- * a hack has already taken place, and given that we're stuck on this version
- * for IE8 support, we might as well do this until a mjor upgrade to remove IE8
- * support.
-/*       width: 0px; */
-/*      display:none; */
+    .query-builder .rules-group-header input[name$=_cond] {
+      display:none;
     }
+  .query-builder .rules-list {
+    list-style:none;
+    padding:0 0 0 20px;
+    margin:0;
+  }
 
-/* RULES */
-.rules-list {
-  list-style:none;
-  padding:0 0 0 20px;
-  margin:0;
+.query-builder .rule-container  {}
+  .query-builder .rule-container>div:not(.rule-header) {
+    display:inline-block;
+    margin:0 5px 0 0;
+    vertical-align:top;
+  }
+  .query-builder .rule-value-container:not(:empty) {
+    border-left:1px solid #ddd;
+    padding-left:5px;
+  }
+  .query-builder .rule-value-container label {
+    margin-bottom:0;
+  }
+  .query-builder .rule-value-container label.block {
+    display:block;
+  }
+  .query-builder .rule-container select,
+  .query-builder .rule-container input[type=text],
+  .query-builder .rule-container input[type=number] {
+    padding:1px;
+  }
+
+.query-builder  .has-error {
+  background:#fdd;
+  border-color:#f99;
 }
-  .rule-container  {}
-    .rule-container.has-error {
-      background:#fdd;
-      border-color:#f99;
-    }
-    .rule-container>div:not(.rule-header) {
-      display:inline-block;
-      margin:0 5px 0 0;
-      vertical-align:top;
-    }
-    .rule-value-container:not(:empty) {
-      border-left:1px solid #ddd;
-      padding-left:5px;
-    }
-    .rule-value-container label {
-      margin-bottom:0;
-    }
-    .rule-value-container label.block {
-      display:block;
-    }
-    .rule-container select,
-    .rule-container input[type=text],
-    .rule-container input[type=number] {
-      padding:1px;
-    }
 
-/* TICKS */
-.rules-list>* {
+.query-builder .error-container {
+  display:none !important;
+  cursor:help;
+  color:red;
+}
+
+.query-builder .has-error .error-container {
+  display:inline-block !important;
+}
+
+.query-builder .rules-list>* {
   position:relative;
 }
-  .rules-list>*:before,
-  .rules-list>*:after {
+  .query-builder .rules-list>*:before,
+  .query-builder .rules-list>*:after {
     content:'';
     position:absolute;
     left:-15px;
     width:15px;
-    height:60%;
     height:calc(50% + 4px);
     border-color:#ccc;
     border-style:solid;
   }
 
-  .rules-list>*:before {
+  .query-builder .rules-list>*:before {
     top:-2px;
     border-width:0 0 2px 2px;
   }
-  .rules-list>*:after {
+  .query-builder .rules-list>*:after {
     top:50%;
     border-width:0 0 0 2px;
   }
 
-  .rules-list>*:first-child:before {
+  .query-builder .rules-list>*:first-child:before {
     top:-12px;
     height:calc(50% + 14px);
   }
-  .rules-list>*:last-child:before {
+  .query-builder .rules-list>*:last-child:before {
     border-radius:0 0 0 4px;
   }
-  .rules-list>*:last-child:after {
+  .query-builder .rules-list>*:last-child:after {
     display:none;
   }
-
-/* DRAG & DROP */
-.rule-container .drag-handle,
-.rules-group-container .drag-handle {
+.query-builder .tooltip-inner {
+  color:#fdd !important;
+}
+.query-builder p.filter-description {
+  margin:5px 0 0 0;
+  background:#D9EDF7;
+  border:1px solid #BCE8F1;
+  color:#31708F;
+  border-radius:4px;
+  padding:2px 5px;
+  font-size:0.8em;
+}
+.query-builder  .drag-handle {
   cursor:move;
   display:inline-block;
+  vertical-align:middle;
+  margin-left:5px;
 }
 
-.rule-container .dragged,
-.rules-group-container .dragged {
+.query-builder  .dragged {
   opacity:0.5;
 }
 
-.rule-placeholder {
+.query-builder .rule-placeholder {
   border:1px dashed #bbb;
   opacity:0.7;
 }
