--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -240,7 +240,7 @@
             <script type="text/javascript" src="[% url.js %]/underscore-min.js"></script>
         [% END %]
         [% IF page == "view" OR page == "layout" %]
-            <script type="text/javascript" src="[% url.js %]/query-builder.js"></script>
+            <script type="text/javascript" src="[% url.js %]/query-builder.standalone.js"></script>
         [% END %]
         [% IF page == "view" OR page == "edit" OR page == "layout" OR page == "bulk" %]
             <script type="text/javascript" src="[% url.js %]/bootstrap3-typeahead.min.js"></script>
