--- a/views/view.tt
+++ b/views/view.tt
@@ -21,8 +21,7 @@
             [% END %]
             <table class="table table-striped">
                 <tr><th><input type="checkbox" id="selectall" title="Select/deselect all"></th><th>Name</th></tr>
-                [% FOR column IN all_columns %]
-                    [% NEXT IF column.internal %]
+                [% FOR column IN layout.all(user_can_read, 1) %]
                     <tr>
                         <td>
                             <input class="col_check" type="checkbox" name="column" value="[% column.id %]"
@@ -162,7 +161,7 @@
                 <p>
                     <select class="form-control" name="sortfield">
                         <option value="" [% UNLESS sort.column.id %]selected[% END %]>ID</option>
-                        [% FOR column IN all_columns %]
+                        [% FOR column IN layout.all(user_can_read, 1) %]
                             <option value="[% column.id %]" [% IF sort.layout_id == column.id %]selected[% END %]>[% column.name | html_entity %]</option>
                         [% END %]
                     </select>
